2011-02-20  Ojan Vafai  <ojan@chromium.org>

        Reviewed by Adam Barth.

        [codereviewtool] avoid overriding ctrl/cmd + r
        https://bugs.webkit.org/show_bug.cgi?id=54852

        * code-review.js:

2011-02-16  Ojan Vafai  <ojan@chromium.org>

        Reviewed by Adam Barth.

        keyboard support for extending/shrinking comment context
        https://bugs.webkit.org/show_bug.cgi?id=54612

        ctrl+shift+up/down will extend/shrink the comment context when
        a comment is focused or when one is being edited.

        Also, switch over to using keydown instead of keypress events.
        This lets us share code for handling escape and other key events.
        Also, keypress is evil and should die.

        * code-review.js:

2011-02-20  Ojan Vafai  <ojan@chromium.org>

        Recommit accidental revert.
        r79180 accidentally revereted r79178.
        * code-review.js:

2011-02-20  Ojan Vafai  <ojan@chromium.org>

        Reviewed by Adam Barth.

        [codereviewtool] add more help information
        https://bugs.webkit.org/show_bug.cgi?id=54847

        * code-review.js:

2011-02-20  Ojan Vafai  <ojan@chromium.org>

        Reviewed by Adam Barth.

        [codereviewtool] use 'r' to focus the review select element
        https://bugs.webkit.org/show_bug.cgi?id=54845

        This allows for quick keyboard access to the toolbar items.
        Hit r to get to the review select element. Then you can
        tab to the cq/preview/publish elements.

        * code-review.js:

2011-02-20  Ojan Vafai  <ojan@chromium.org>

        Reviewed by Adam Barth.

        [codereviewtool] don't let lines/diffblocks be mouse focusable
        https://bugs.webkit.org/show_bug.cgi?id=54851

        Unfortunately, this will only work once https://bugs.webkit.org/show_bug.cgi?id=54727
        is committed. In the interim, it won't break anything.

        * code-review.js:

2011-02-20  Ojan Vafai  <ojan@chromium.org>
