@@ -1,3 +1,12 @@
+2011-02-21  Ojan Vafai  <ojan@chromium.org>
+
+        Reviewed by Adam Barth.
+
+        [codereviewtool] focus comment on accept
+        https://bugs.webkit.org/show_bug.cgi?id=54930
+
+        * code-review.js:
+
 2011-02-20  Ojan Vafai  <ojan@chromium.org>
 
         Reviewed by Adam Barth.
